--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_FIREBASE_Api_KEY = "AIzaSyBTC3ZFaWGLDMELDN1t6SUJYMhwjZ5k3WI"
+VITE_FIREBASE_API_KEY = "AIzaSyBTC3ZFaWGLDMELDN1t6SUJYMhwjZ5k3WI"
